--- a/lord_of_the_universalis/localisation/events_lotr_l_english.yml
+++ b/lord_of_the_universalis/localisation/events_lotr_l_english.yml
@@ -470,9 +470,13 @@
  flavor_orc.1.d: "The Orcs are fighting among eachother to determine who is the strongest. Some of your Orcs will perish in the process!"
  flavor_orc.1.a: "Let them fight, We need only the strongest Orcs!"
  flavor_orc.1.b: "Break up the fighting I need every single one of them!"
+ flavor_orc.2.t: "Our hunters return with a huge catch!"
+ flavor_orc.2.d: "The orc hunters have had a great hunt and return to our province with plenty of meat for our people to feed on."
+ flavor_orc.2.a: "Looks like meat is back on the menu boys!!!"
  flavor_orc.3.t: "A new Warlord Rises"
- flavor_orc.3.d: "A new orc warlord emerges from within your ranks!"
+ flavor_orc.3.d: "A new orc warlord emerges from within your ranks! And takes command of a couple of our garrisons! It looks as if he has plenty of experience fighting."
  flavor_orc.3.a: "Good! we could use a strong leader!!"
+
  
  
  # Events(Race Buffs)
