--- a/lord_of_the_universalis/localisation/religions_lotr_l_english.yml
+++ b/lord_of_the_universalis/localisation/religions_lotr_l_english.yml
@@ -43,6 +43,7 @@
  religion_dragons: "Dragon"
  religion_spider: "Spider"
  religion_angmarim: "Angmarism"
+ religion_burz_uruk: "Burz Uruk"
  
  religion_group_sun: "Sun people"
  religion_sun: "Sun People"
