--- a/lord_of_the_universalis/localisation/replace/replace_l_english.yml
+++ b/lord_of_the_universalis/localisation/replace/replace_l_english.yml
@@ -975,3 +975,65 @@
  #desc_icon_nicholas:1 "Nikolaos the wonderworker or the bearer of gifts, is one of the earliest Christian saints and appears on many icons as an elderly man with a white beard."
  #icon_climacus:0 "Icon of St. John Climacus"
  #desc_icon_climacus:1 "The Author of 'The Ladder of Divine Ascent', St. John Climacus has inspired generations of Orthodox Christians by describing how to strive towards the divine through asceticism and a pious life."
+ 
+ #Orc Religion based on Muslim religion
+ positive_piety:1 "Order"
+ negative_piety:1 "Chaotic"
+ 
+ MODIFIER_MONTHLY_PIETY:0 "Monthly Control"
+ ADD_PIETY:0 "$DIRECTION$ $VALUE$ Control"
+ 
+ CURRENT_PIETY:0 "Current Control"
+ CURRENT_PIETY_IS:0 "Our current Control is $VALUE$"
+ 
+ USES_PIETY:0 "$COUNTRY|Y$ uses Control."
+ USES_NOT_PIETY:0 "$COUNTRY|Y$ does NOT use Control."
+ 
+ GAIN_PIETY:0 "Move $VALUE|Y$ towards Order"
+ LOSE_PIETY:0 "Move $VALUE|Y$ towards Chaotic"
+ 
+ PIETY_BAD_WAR_EFF:2 "Declaring war on a fellow $REL$ will move us away from Order by §Y$VAL$§!."
+ PIETY_GOOD_WAR_EFF:2 "Declaring war on the $REL$ will move us towards Order by §Y$VAL$§!."
+ 
+ converted_to_islam:0 "Joined the Orcs"
+ 
+ PIETY_DESCRIPTION:1 "Control represents in what way our ruler controlls the many masses of Orcs and other beings within our borders. It is measured on a scale between -100 (§YChaotic§!) and 100 (§YOrder§!).\nThe Control you have on your orcs can be affected by various actions you can take. Event options will move your position on the scale as will declaring war on other races (Increase), other Orcs will (Decrease) or succesfully converting provinces (Increase)."
+ PIETY_DESCRIPTION_ESTATES:1 "\nThe type of Control of your ruler will influence the loyalty of your Estates."
+ 
+ PIETY_TOO_LOW_FOR_LEGALISM:1 "To be able to '§YReduce Coruption§!' we need to be at least $NEED|Y$ towards Order. This would impact corruption by $CORRUPTION$."
+ PIETY_LEGALISM_BONUS:1 "Our tradition of Order is a great advantage. §YReduce Coruption§! will move us by $COST|Y$ towards Chaotic but impact corruption by $CORRUPTION$."
+ PIETY_TOO_HI_FOR_MYSTICISM:1 "To be able to '§YTurn Orc Workers To Warriors§!' we need to be at least $NEED|Y$ towards Chaotic. This would gives us the following impact:\n$GAIN$"
+ PIETY_MYSTICISM_BONUS:1 "Our tradition of Chaotic is a great advantage. §YTurn Orc Workers To Warriors§! will move us by $COST|Y$ towards Order but offer us $GAIN$"
+ PIETY_MYSTICISM_COOLDOWN:0 "You can only '§YTurn Orc Workers To Warriors§!' once every $YEARS|Y$ years.\nYou will be able to do it again in $UNTIL|Y$."
+ PIETY_LEGALISM_COOLDOWN:0 "You can only '§YReduce Coruption§!' once every $YEARS|Y$ years.\nYou will be able to do it again in $UNTIL|Y$."
+ 
+ LEGALISM_TITLE:0 "Reduce Coruption!"
+ LEGALISM_SETUP:0 "When we have used our strong legalism to enforce faithful adherence."
+ LEGALISM_HEADER:0 "$MESSENGER$"
+ LEGALISM_1:0 "Faithful Adherence Enforced!"
+ LEGALISM_2:0 ""
+ LEGALISM_3:0 "$DESC$"
+ LEGALISM_4:0 ""
+ LEGALISM_5:0 ""
+ LEGALISM_6:0 ""
+ LEGALISM_LOG:0 "Faithful Adherence Enforced!"
+ LEGALISM_BTN1:0 "OK"
+ LEGALISM_BTN2:0 "OK"
+ LEGALISM_BTN3:0 "Go to"
+ LEGALISM_MAP:0 ""
+ MYSTICISM_TITLE:0 "Call orcs!"
+ MYSTICISM_SETUP:0 "When we have used our strong mysticism to call on religious followers."
+ MYSTICISM_HEADER:0 "$MESSENGER$"
+ MYSTICISM_1:0 "Call on Religious Followers!"
+ MYSTICISM_2:0 ""
+ MYSTICISM_3:0 "$DESC$"
+ MYSTICISM_4:0 ""
+ MYSTICISM_5:0 ""
+ MYSTICISM_6:0 ""
+ MYSTICISM_LOG:0 "Call on Religious Followers!"
+ MYSTICISM_BTN1:0 "OK"
+ MYSTICISM_BTN2:0 "OK"
+ MYSTICISM_BTN3:0 "Go to"
+ MYSTICISM_MAP:0 ""
+ 
+ 
