--- a/lord_of_the_universalis/localisation/tooltips_lotr_l_english.yml
+++ b/lord_of_the_universalis/localisation/tooltips_lotr_l_english.yml
@@ -4,5 +4,5 @@
  MARRIAGE_WAR: "We are at war."
  MARRIAGE_RACE: "We are not the same race."
  SAURON_BLOCK: "Sauron is not powerful enough yet to do this."
- 
+ dol_guldur_switch_nation_meta: "§Y*META* Switching to Mordor can at first sight, seem like some of the world looks bugged and terra incognita. Just let the timer play a month and all shall be fixed.§!"
  
